# SYNLABEL

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
experiments/analysis/: feature_hiding.py  noise_injection.py
experiments/demonstrations/: exp_feature_hiding.py  exp_injection_methods.py  ground_truth_generation.py
experiments/uncertainty/: fh_uncertainty.ipynb  fh_uncertainty.py
src/synlabel/: __init__.py
src/synlabel/dataset_types/: abstract_datasets.py  discrete_observed.py  distributed_observed.py  expert_data.py  ground_truth.py  partial_ground_truth.py
src/synlabel/transformations/: feature_hiding.py  transformations.py
src/synlabel/utils/: helper_functions.py  validation.py
