[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synlabel"
version = "1.0.0"
authors = [
  { name="Sjoerd de Vries", email="s.devries1@uu.nl" },
]
description = "This is a short description of the project"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies =["numpy", "pandas", "scikit-learn", "scipy", "statsmodels"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
dev = ["black", "flake8", "flake8-bugbear", "isort"]

[tool.isort]
profile = "black"
